<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="Профиль"
        app:titleTextColor="@color/white" />

    <ImageView
        android:id="@+id/imageview_photo"
        android:layout_width="120dp"
        android:layout_height="160dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:srcCompat="@drawable/ic_baseline_add_photo_alternate_24" />

    <TextView
        android:id="@+id/textview_first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:hint="@string/textview_first_name_default"
        android:textSize="18dp"
        app:layout_constraintStart_toEndOf="@+id/imageview_photo"
        app:layout_constraintTop_toTopOf="@+id/imageview_photo" />

    <TextView
        android:id="@+id/textview_last_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/textview_last_name_default"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textview_first_name"
        app:layout_constraintTop_toBottomOf="@+id/textview_first_name" />

    <TextView
        android:id="@+id/textview_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:hint="@string/textview_age_default"
        android:textSize="18dp"
        app:layout_constraintStart_toStartOf="@+id/textview_last_name"
        app:layout_constraintTop_toBottomOf="@+id/textview_last_name" />

    <Button
        android:id="@+id/edit_profile_button"
        style="@style/Widget.MaterialComponents.Button.TextButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="Редактировать"
        app:layout_constraintStart_toStartOf="@+id/textview_age"
        app:layout_constraintTop_toBottomOf="@+id/textview_age" />

</androidx.constraintlayout.widget.ConstraintLayout>